# waha-python

./: .gitignore  LICENSE  MANIFEST.in  README.md  pyproject.toml  requirements.txt  setup.py
.github/workflows/: publish.yml  pytest.yml
examples/: __init__.py  basic_usage.py  webhook_server.py
tests/: test_client.py
waha_python/: __init__.py  base_module.py  client.py  exceptions.py
waha_python/modules/: __init__.py  channels.py  chats.py  contacts.py  groups.py  messages.py  profile.py  sessions.py  status.py
